--- a/templates/authemail/password_reset_email.html
+++ b/templates/authemail/password_reset_email.html
@@ -12,7 +12,7 @@
         hast,<br>
         klicke bitte auf den folgenden Link, um dein Passwort zurückzusetzen: <br></p>
     <br>
-    <a href="{{ frontend_url }}{{ reset_link_path }}" style='display: inline-block;
+    <a href="{{ frontend_url }}forgot/{{ reset_link_path }}" style='display: inline-block;
            font-weight: 700;
            border-radius: 40px;
            background: linear-gradient(0deg, #121212 0%, #2E3EDF 50%, #2E3EDF 100%);
@@ -42,7 +42,7 @@
     <p>we recently received a request to reset your password. If you made this request,<br>
         please click on the following link to reset your password:<br></p>
     <br>
-    <a href="{{ frontend_url }}{{ reset_link_path }}" style='display: inline-block;
+    <a href="{{ frontend_url }}forgot/{{ reset_link_path }}" style='display: inline-block;
            font-weight: 700;
            border-radius: 40px;
            background: linear-gradient(0deg, #121212 0%, #2E3EDF 50%, #2E3EDF 100%);
