--- a/templates/authemail/signup_email.html
+++ b/templates/authemail/signup_email.html
@@ -16,7 +16,7 @@
         Um deine Registrierung abzuschließen und deine E-Mail zu bestätigen, klicke bitte auf den Link hier unten:<br>
     </p>
     <br>
-    <a href="{{ frontend_url }}signUp/?code={{ code }}" style='display: inline-block;
+    <a href="{{ frontend_url }}signUp/{{ code }}" style='display: inline-block;
            font-weight: 700;
            border-radius: 40px;
            background: linear-gradient(0deg, #121212 0%, #2E3EDF 50%, #2E3EDF 100%);
@@ -43,7 +43,7 @@
     <p>thank you for registering with <b style='color:#2E3EDF;'>Videoflix</b>.
         To complete your registration and verify your email address, please click the link below:<br></p>
     <br>
-    <a href="{{ frontend_url }}signUp/?code={{ code }}" style='display: inline-block;
+    <a href="{{ frontend_url }}signUp/{{ code }}" style='display: inline-block;
            font-weight: 700;
            border-radius: 40px;
            background: linear-gradient(0deg, #121212 0%, #2E3EDF 50%, #2E3EDF 100%);
